--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="#">Tecnologia e Programação</a></li>
     <li><a href="#">Negócios e Marketing</a></li>
     <li><a href="#">Saúde e Bem-estar</a></li>
-    <li><a href="#">Idiomas</a></li>
+    <li><a href="idiomas.html">Idiomas</a></li>
   </ul>
 
   <footer>
