--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>💡 Aprender por Categoria</h2>
   <ul>
     <li><a href="#">Tecnologia e Programação</a></li>
-    <li><a href="#">Negócios e Marketing</a></li>
+    <li><a href="negocios.html">Negócios e Marketing</a></li>
     <li><a href="#">Saúde e Bem-estar</a></li>
     <li><a href="idiomas.html">Idiomas</a></li>
   </ul>
