--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   </ul>
 
   <h2>💡 Aprender por Categoria</h2>
-  <ul>
-    <li><a href="#">Tecnologia e Programação</a></li>
-    <li><a href="negocios.html">Negócios e Marketing</a></li>
-    <li><a href="#">Saúde e Bem-estar</a></li>
-    <li><a href="idiomas.html">Idiomas</a></li>
-  </ul>
+<ul>
+  <li><a href="tecnologia.html">Tecnologia e Programação</a></li>
+  <li><a href="negocios.html">Negócios e Marketing</a></li>
+  <li><a href="#">Saúde e Bem-estar</a></li> <!-- Can build this page next -->
+  <li><a href="idiomas.html">Idiomas</a></li>
+</ul>
 
   <footer>
     <p>Curadoria: VenusianSeed · Hospedado com GitHub Pages</p>
