--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🎓 Cursos Gratuitos</h1>
-  <p>Bem-vindo! Aqui vais encontrar cursos online gratuitos, selecionados a dedo, nas áreas mais procuradas em Portugal e no mundo.</p>
+  <div class="sidebar">
+    <h2>📚 Categorias</h2>
+    <ul>
+      <li><a href="index.html">🏠 Página Inicial</a></li>
+      <li><a href="tecnologia.html">💻 Tecnologia</a></li>
+      <li><a href="negocios.html">📈 Negócios</a></li>
+      <li><a href="idiomas.html">🗣 Idiomas</a></li>
+      <li><a href="#">❤️ Saúde (em breve)</a></li>
+    </ul>
+  </div>
 
-  <h2>🔥 Cursos em Destaque</h2>
-  <ul>
-    <li><a href="https://pt.coursera.org/learn/machine-learning">Machine Learning (Coursera – legendas em português)</a></li>
-    <li><a href="https://cs50.harvard.edu/x/2024/">CS50: Introdução à Ciência da Computação (Harvard – opção legendas)</a></li>
-    <li><a href="https://www.futurelearn.com/courses/psychology">Introdução à Psicologia (FutureLearn – multilíngue)</a></li>
-  </ul>
+  <div class="main-content">
+    <h1>🎓 Cursos Gratuitos</h1>
+    <p>Bem-vindo! Aqui vais encontrar cursos online gratuitos, selecionados a dedo, nas áreas mais procuradas em Portugal e no mundo.</p>
 
-  <h2>💡 Aprender por Categoria</h2>
-<ul>
-  <li><a href="tecnologia.html">Tecnologia e Programação</a></li>
-  <li><a href="negocios.html">Negócios e Marketing</a></li>
-  <li><a href="#">Saúde e Bem-estar</a></li> <!-- Can build this page next -->
-  <li><a href="idiomas.html">Idiomas</a></li>
-</ul>
-
-  <footer>
-    <p>Curadoria: VenusianSeed · Hospedado com GitHub Pages</p>
-  </footer>
+    <h2>🔥 Cursos em Destaque</h2>
+    <ul>
+      <li><a href="https://pt.coursera.org/learn/machine-learning">Machine Learning (Coursera – legendas em português)</a></li>
+      <li><a href="https://cs50.harvard.edu/x/2024/">CS50: Introdução à Ciência da Computação (Harvard – opção legendas)</a></li>
+      <li><a href="https://www.futurelearn.com/courses/psychology">Introdução à Psicologia (FutureLearn – multilíngue)</a></li>
+    </ul>
+  </div>
 </body>
 </html>
