--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cursos Gratuitos</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 <body>
   <div class="sidebar">
     <h2>📚 Categorias</h2>
@@ -22,4 +30,6 @@
     </ul>
   </div>
 </body>
+</html>
+
 
