--- a/negocios.html
+++ b/negocios.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cursos de Negócios e Marketing</title>
+  <title>Business Courses</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📈 Cursos de Negócios & Marketing</h1>
-  <p>Aprende marketing digital, empreendedorismo e gestão com cursos gratuitos em português ou com legendas.</p>
+  <div class="container">
+    <aside class="sidebar">
+      <h2>📚 Categories</h2>
+      <ul>
+        <li><a href="index.html">🏠 Homepage</a></li>
+        <li><a href="tecnologia.html">💻 Technology</a></li>
+        <li><a href="negocios.html">📈 Business</a></li>
+        <li><a href="idiomas.html">🗣️ Languages</a></li>
+        <li><span style="color: #999;">❤️ Health (coming soon)</span></li>
+      </ul>
+    </aside>
 
-  <ul>
-    <li><a href="https://pt.coursera.org/learn/marketing-digital">Fundamentos de Marketing Digital (Coursera – legendas em português)</a></li>
-    <li><a href="https://pt.coursera.org/learn/startup-empreendedorismo">Startup e Empreendedorismo (Coursera – legendas PT)</a></li>
-    <li><a href="https://www.udemy.com/course/introducao-ao-marketing-digital/">Introdução ao Marketing Digital (Udemy – grátis, PT)</a></li>
-    <li><a href="https://www.futurelearn.com/courses/digital-marketing">Digital Marketing Strategy (FutureLearn – multilíngue)</a></li>
-    <li><a href="https://academy.hubspot.com/courses/marketing">Curso de Marketing Gratuito (HubSpot Academy – PT disponível)</a></li>
-  </ul>
-
-  <footer>
-    <p><a href="index.html">← Voltar à página inicial</a></p>
-  </footer>
+    <main class="content">
+      <h1>📈 Business &<br>Marketing Courses</h1>
+      <p>Learn digital marketing, entrepreneurship, and management with free courses in Portuguese or with subtitles.</p>
+      <ul>
+        <li><a href="https://www.coursera.org/learn/digital-marketing?lang=pt">Fundamentals of Digital Marketing (Coursera – Portuguese subtitles)</a></li>
+        <li><a href="https://www.coursera.org/learn/wharton-entrepreneurship?lang=pt">Startup and Entrepreneurship (Coursera – Portuguese subtitles)</a></li>
+        <li><a href="https://www.udemy.com/course/digital-marketing-basics-free-course/">Introduction to Digital Marketing (Udemy – free, PT)</a></li>
+        <li><a href="https://www.futurelearn.com/courses/digital-marketing-strategy">Digital Marketing Strategy (FutureLearn – multilingual)</a></li>
+        <li><a href="https://academy.hubspot.com/courses/marketing">Free Marketing Course (HubSpot Academy – PT available)</a></li>
+      </ul>
+      <p><a href="index.html">← Back to homepage</a></p>
+    </main>
+  </div>
 </body>
 </html>
+
