--- a/negocios.html
+++ b/negocios.html
@@ -19,12 +19,12 @@
     </aside>
 
     <main class="content">
-      <h1>📈 Business &<br>Marketing Courses</h1>
+      <h1>📈 Business & Marketing Courses</h1>
       <p>Learn digital marketing, entrepreneurship, and management with free courses in Portuguese or with subtitles.</p>
       <ul>
         <li><a href="https://www.coursera.org/learn/digital-marketing?lang=pt">Fundamentals of Digital Marketing (Coursera – Portuguese subtitles)</a></li>
         <li><a href="https://www.coursera.org/learn/wharton-entrepreneurship?lang=pt">Startup and Entrepreneurship (Coursera – Portuguese subtitles)</a></li>
-        <li><a href="https://www.udemy.com/course/digital-marketing-basics-free-course/">Introduction to Digital Marketing (Udemy – free, PT)</a></li>
+        <li><a href="https://www.udemy.com/course/intro-to-digital-marketing/">Introduction to Digital Marketing (Udemy – free, PT)</a></li>
         <li><a href="https://www.futurelearn.com/courses/digital-marketing-strategy">Digital Marketing Strategy (FutureLearn – multilingual)</a></li>
         <li><a href="https://academy.hubspot.com/courses/marketing">Free Marketing Course (HubSpot Academy – PT available)</a></li>
       </ul>
@@ -33,4 +33,3 @@
   </div>
 </body>
 </html>
-
