--- a/negocios.html
+++ b/negocios.html
@@ -14,20 +14,22 @@
         <li><a href="tecnologia.html">💻 Technology</a></li>
         <li><a href="negocios.html">📈 Business</a></li>
         <li><a href="idiomas.html">🗣️ Languages</a></li>
-        <li><span style="color: #999;">❤️ Health (coming soon)</span></li>
+        <li><a href="#">❤️ Health (coming soon)</a></li>
       </ul>
     </aside>
 
-    <main class="content">
-      <h1>📈 Business & Marketing Courses</h1>
+    <main class="main-content">
+      <h1>📈 Business &<br>Marketing Courses</h1>
       <p>Learn digital marketing, entrepreneurship, and management with free courses in Portuguese or with subtitles.</p>
+
       <ul>
-        <li><a href="https://www.coursera.org/learn/digital-marketing?lang=pt">Fundamentals of Digital Marketing (Coursera – Portuguese subtitles)</a></li>
-        <li><a href="https://www.coursera.org/learn/wharton-entrepreneurship?lang=pt">Startup and Entrepreneurship (Coursera – Portuguese subtitles)</a></li>
-        <li><a href="https://www.udemy.com/course/intro-to-digital-marketing/">Introduction to Digital Marketing (Udemy – free, PT)</a></li>
+        <li><a href="https://www.coursera.org/learn/marketing-digital">Fundamentals of Digital Marketing (Coursera – Portuguese subtitles)</a></li>
+        <li><a href="https://www.coursera.org/learn/startup-entrepreneurship">Startup and Entrepreneurship (Coursera – Portuguese subtitles)</a></li>
+        <li><a href="https://www.udemy.com/course/digital-marketing-pt/">Introduction to Digital Marketing (Udemy – free, PT)</a></li>
         <li><a href="https://www.futurelearn.com/courses/digital-marketing-strategy">Digital Marketing Strategy (FutureLearn – multilingual)</a></li>
-        <li><a href="https://academy.hubspot.com/courses/marketing">Free Marketing Course (HubSpot Academy – PT available)</a></li>
+        <li><a href="https://academy.hubspot.com/courses/inbound-marketing">Free Marketing Course (HubSpot Academy – PT available)</a></li>
       </ul>
+
       <p><a href="index.html">← Back to homepage</a></p>
     </main>
   </div>
