--- a/tecnologia.html
+++ b/tecnologia.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cursos de Tecnologia</title>
+  <title>Technology Courses</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>💻 Cursos de Tecnologia & Programação</h1>
-  <p>Selecionámos cursos gratuitos de tecnologia com suporte em português.</p>
+  <div class="container">
+    <aside class="sidebar">
+      <h2>📚 Categories</h2>
+      <ul>
+        <li><a href="index.html">🏠 Homepage</a></li>
+        <li><a href="tecnologia.html">💻 Technology</a></li>
+        <li><a href="negocios.html">📈 Business</a></li>
+        <li><a href="idiomas.html">🗣️ Languages</a></li>
+        <li><a href="#">❤️ Health (coming soon)</a></li>
+      </ul>
+    </aside>
 
-  <ul>
-    <li><a href="https://pt.coursera.org/learn/machine-learning">Machine Learning - Andrew Ng (Coursera - legendas PT)</a></li>
-    <li><a href="https://cs50.harvard.edu/x/2024/">CS50 - Ciência da Computação (Harvard - legendas PT)</a></li>
-    <li><a href="https://www.udemy.com/course/html5-css3-js/">HTML5, CSS3 e JavaScript (Udemy - grátis, legendas)</a></li>
-    <li><a href="https://www.khanacademy.org/computing/computer-programming">Introdução à Programação (Khan Academy - conteúdo traduzido)</a></li>
-    <li><a href="https://www.edx.org/course/introduction-to-computer-science">Introdução à Informática (edX - MIT - legendas PT)</a></li>
-  </ul>
-
-  <footer>
-    <p><a href="index.html">← Voltar à página inicial</a></p>
-  </footer>
+    <main class="main-content">
+      <h1>💻 Technology Courses</h1>
+      <p>Discover top free courses in programming, machine learning, data science, and more — available in Portuguese or with subtitles.</p>
+      <ul>
+        <li><a href="https://www.coursera.org/learn/machine-learning">Machine Learning (Coursera – Portuguese subtitles)</a></li>
+        <li><a href="https://cs50.harvard.edu/x/">CS50: Introduction to Computer Science (Harvard – subtitles option)</a></li>
+        <li><a href="https://www.edx.org/course/introduction-to-computer-science-and-programming-7">Intro to CS & Programming (edX – PT subtitles)</a></li>
+      </ul>
+      <p><a href="index.html">← Back to homepage</a></p>
+    </main>
+  </div>
 </body>
 </html>
