--- a/idiomas.html
+++ b/idiomas.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cursos de Idiomas</title>
+  <title>Language Courses</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🗣 Cursos de Idiomas</h1>
-  <p>Aprende novas línguas com cursos gratuitos e conteúdos em português ou com legendas.</p>
+  <div class="container">
+    <aside class="sidebar">
+      <h2>📚 Categories</h2>
+      <ul>
+        <li><a href="index.html">🏠 Homepage</a></li>
+        <li><a href="tecnologia.html">💻 Technology</a></li>
+        <li><a href="negocios.html">📈 Business</a></li>
+        <li><a href="idiomas.html">🗣️ Languages</a></li>
+        <li><a href="#">❤️ Health (coming soon)</a></li>
+      </ul>
+    </aside>
 
-  <ul>
-    <li><a href="https://www.duolingo.com/">Duolingo (Português nativo – vários idiomas)</a></li>
-    <li><a href="https://pt.coursera.org/learn/ingles-para-negocios">Inglês para Negócios (Coursera – legendas PT)</a></li>
-    <li><a href="https://www.edx.org/course/english-for-career-development">English for Career Development (edX – legendas PT)</a></li>
-    <li><a href="https://www.futurelearn.com/courses/exploring-english-language-and-culture">Exploring English (FutureLearn – multilíngue)</a></li>
-    <li><a href="https://www.memrise.com/">Memrise (Português – vários idiomas)</a></li>
-    <li><a href="https://www.busuu.com/pt">Busuu (Português – cursos interativos grátis)</a></li>
-  </ul>
-
-  <footer>
-    <p><a href="index.html">← Voltar à página inicial</a></p>
-  </footer>
+    <main class="main-content">
+      <h1>🗣️ Language Courses</h1>
+      <p>Learn new languages for free with these beginner-friendly, high-quality courses — some with subtitles or fully in Portuguese.</p>
+      <ul>
+        <li><a href="https://www.duolingo.com/">Duolingo – Gamified language learning (multilingual)</a></li>
+        <li><a href="https://www.coursera.org/specializations/english-speaking">English for Beginners (Coursera – subtitles available)</a></li>
+        <li><a href="https://www.busuu.com/">Busuu – English, Spanish, French and more (PT available)</a></li>
+      </ul>
+      <p><a href="index.html">← Back to homepage</a></p>
+    </main>
+  </div>
 </body>
 </html>
