--- a/idiomas.html
+++ b/idiomas.html
@@ -8,27 +8,28 @@
 </head>
 <body>
   <div class="container">
-    <aside class="sidebar">
+    <div class="sidebar">
       <h2>📚 Categories</h2>
       <ul>
         <li><a href="index.html">🏠 Homepage</a></li>
-        <li><a href="tecnologia.html">💻 Technology</a></li>
+        <li><a href="tecnologia.html">🖥️ Technology</a></li>
         <li><a href="negocios.html">📈 Business</a></li>
         <li><a href="idiomas.html">🗣️ Languages</a></li>
         <li><a href="#">❤️ Health (coming soon)</a></li>
       </ul>
-    </aside>
-
-    <main class="main-content">
+    </div>
+    
+    <div class="main-content">
       <h1>🗣️ Language Courses</h1>
-      <p>Learn new languages for free with these beginner-friendly, high-quality courses — some with subtitles or fully in Portuguese.</p>
+      <p>Improve your English, Portuguese, or other language skills with free online courses that offer subtitles or native instruction.</p>
       <ul>
-        <li><a href="https://www.duolingo.com/">Duolingo – Gamified language learning (multilingual)</a></li>
-        <li><a href="https://www.coursera.org/specializations/english-speaking">English for Beginners (Coursera – subtitles available)</a></li>
-        <li><a href="https://www.busuu.com/">Busuu – English, Spanish, French and more (PT available)</a></li>
+        <li><a href="https://www.futurelearn.com/courses/english-for-the-workplace" target="_blank">English for the Workplace (FutureLearn – subtitles available)</a></li>
+        <li><a href="https://www.duolingo.com" target="_blank">Duolingo – Learn Portuguese, Spanish, and more (free)</a></li>
+        <li><a href="https://www.coursera.org/learn/english-speaking" target="_blank">Improve Your English Communication Skills (Coursera – PT subtitles)</a></li>
+        <li><a href="https://alison.com/course/spanish-for-beginners" target="_blank">Spanish for Beginners (Alison – free)</a></li>
       </ul>
       <p><a href="index.html">← Back to homepage</a></p>
-    </main>
+    </div>
   </div>
 </body>
 </html>
