--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
       <li><a href="idiomas.html">🗣 Idiomas</a></li>
       <li><a href="#">❤️ Saúde (em breve)</a></li>
     </ul>
+    <div class="testimonial">
+  <h2>💬 O Que Estão a Dizer</h2>
+  <p><strong>Impressão Geral:</strong> 👍 Um Repositório de Recursos Sólido!<br>
+  Esta é uma coleção bem organizada e abrangente de recursos educacionais gratuitos em várias áreas da tecnologia. O site tem um design moderno e limpo, e é fácil de navegar.</p>
+
+  <p><strong>Pontos Fortes:</strong><br>
+  ✅ Ótima categorização – Secções claras para Desenvolvimento, IA/ML, Cloud, Cibersegurança, etc.<br>
+  ✅ Recursos de qualidade – Inclui plataformas como freeCodeCamp, Coursera, edX, Harvard CS50<br>
+  ✅ Foco prático – Muitas skills requisitadas no mercado de trabalho<br>
+  ✅ Completamente gratuito – Sem custos escondidos, o que é excelente para os alunos</p>
+
+  <p><strong>Oportunidades de Melhoria:</strong><br>
+  • Seria útil ter uma breve descrição dos cursos<br>
+  • Poderia incluir avaliações de utilizadores ou níveis de dificuldade<br>
+  • Algumas secções (como Blockchain) ainda estão um pouco vazias</p>
+
+  <p><strong>Veredito:</strong><br>
+  💯 Vale a pena adicionar aos favoritos. Quem criou isto (Wade Winston?) está a prestar um grande serviço!</p>
+</div>
   </div>
 
   <div class="main-content">
