--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="tecnologia.html">💻 Tecnologia</a></li>
       <li><a href="negocios.html">📈 Negócios</a></li>
       <li><a href="idiomas.html">🗣 Idiomas</a></li>
+      <li><a href="blog.html">📝 Blog</a></li>
       <li><a href="#">❤️ Saúde (em breve)</a></li>
     </ul>
     <div class="testimonial">
