--- a/volta.html
+++ b/volta.html
@@ -24,8 +24,10 @@
     <main class="main-content">
       <h1>🤖 Meet Volta – Your AI Course Guide</h1>
       <div id="volta-app">
-        <!-- Volta will insert Q&A flow here -->
-      </div>
+  <div id="volta-questions"></div>
+  <div id="volta-result" style="margin-top: 20px;"></div>
+  <button onclick="startVolta()" style="margin-top: 20px; padding: 10px 20px;">🎯 Start</button>
+</div>
     </main>
   </div>
 
